# Reversan-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  analysis.txt  analysis2.txt  analysis_experimental.txt  board.cpp  board.h  board_avx2.cpp  board_nosimd.cpp  board_print.cpp  board_state.cpp  gmon.out  main  main.cpp  reversi.cpp  reversi.h  reversi.h.gch  terminal.cpp  terminal.h  transposition_table.cpp  transposition_table.h
doc/: report_cs.md
doc/graphs/: grapher.py
include/: alphabeta.h  app.h  board.h  default_settings.h  engine.h  move_order.h  negascout.h  parser.h  reversi.h  search.h  terminal.h  transposition_table.h  ui.h
include/app/: app.h  default_settings.h
include/board/: board.h
include/engine/: alphabeta.h  engine.h  move_order.h  negascout.h
include/ui/: terminal.h  ui.h
include/utils/: parser.h  thread_manager.h
src/: alphabeta.cpp  app.cpp  board_avx2.cpp  board_nosimd.cpp  board_print.cpp  board_state.cpp  main.cpp  move_order.cpp  negascout.cpp  parser.cpp  reversi.cpp  search.cpp  terminal.cpp  thread_manager.cpp  transposition_table.cpp
src/app/: app.cpp
src/board/: board_avx2.cpp  board_nosimd.cpp  board_state.cpp
src/engine/: alphabeta.cpp  move_order.cpp  negascout.cpp  transposition_table.cpp
src/ui/: terminal.cpp
src/utils/: parser.cpp  thread_manager.cpp
